--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 body {
-  background: lightblue;
+    background: rgb(92, 92, 194);
+}
+ul {
+  list-style-type: none;
+
+li {
+  display: inline;
+  
+.navbar{
+    display: flex;
+    float:left
+}
+
+/*Styling Footer*/
+.footer {
+    display: flex;
+
+}
+
+img {
+  padding: 40px;
+  margin: auto;
+
+}
 }
