--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@ body {
   background: lightblue;
 }
 /*Styling Navbar*/
+.intro {
+  padding: 15px;
+}
+.proj {
+  padding: 15px;
+}
+.plan {
+  padding: 15px;
+}
 #bar ul {
   list-style-type: none;
 }
@@ -26,14 +35,20 @@ body {
 li {
   font-style: italic;
 }
-.about {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+img {
+  border-radius: 75%;
+  max-height: 300px;
+  max-width: 300px;
+  width: 400px;
+  height: 400px;
 }
 .about p {
   font-style: italic;
+}
+.about {
+  display: flex;
+  align-items: center;
+  padding: 15px;
 }
 /*Footer*/
 #contacts {
